Commit list: 1. Little fix